2011-10-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/Rostream.cpp: Patch by Jelmer Ypma which adds a new device
	'Rcout' not unlike std::cout but uses Rprintf internally
	* src/Rstreambuf.cpp: Idem
	* include/include/Rcpp/iostream/Rostream.h: Idem
	* include/include/Rcpp/iostream/Rstreambuf.h: Idem
	* include/include/Rcpp.h:  Include new headers

2011-09-29  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.7
        * inst/NEWS: Release 0.9.7
        * inst/include/Rcpp/config.h: Release 0.9.7
        * debian/*: Similarly updated for new release to Debian

	* inst/include/Rcpp/sugar/block/SugarBlock_1.h: Apply second path by
	Martyn Plummer to permit compilation on Solaris
	* inst/include/Rcpp/sugar/block/SugarBlock_2.h: Idem
	* inst/include/Rcpp/sugar/block/SugarBlock_3.h: Idem
	* inst/include/Rcpp/sugar/matrix/outer.h: Idem
	* inst/include/Rcpp/vector/LazyVector.h: Idem
	* inst/unitTests/testRcppModule/src/stdVector.cpp: Idem

2011-09-24  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Extractor.h: Apply patch by Martyn Plummer to
	help with compilation on Solaris
	* inst/include/Rcpp/sugar/block/Vectorized_Math.h: Idem
	* inst/include/Rcpp/sugar/functions/math.h: Idem

	* inst/include/Rcpp/sugar/block/SugarBlock_2.h: Also applied path by
	Martyn Plummer, but with additional #ifdef layer for SunPro Compiler
	* inst/include/Rcpp/vector/LazyVector.h: Idem

2011-08-26  Douglas Bates  <bates@stat.wisc.edu>

	* inst/examples/OpenMP/OpenMPandInline.r: Added another variant
	using import_transform for the Rcpp Vector class.

2011-08-26  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/*h: Removed exception specifiers in function headers
	* src/*cpp: Corresponding changes in implementations

	* inst/examples/OpenMP/OpenMPandInline.r: Added two std::transform()
	variants as suggested in rcpp-devel email by Davor Cubranic

2011-08-25  Dirk Eddelbuettel  <edd@debian.org>
